Fixed issue on edge where children elements were not inheriting the parent z-index by default

--- a/webapp/src/app/resource/instructional/instructional-resource.component.scss
+++ b/webapp/src/app/resource/instructional/instructional-resource.component.scss
@@ -13,7 +13,7 @@
         box-shadow: inset -10px 0px 18px -10px rgba(0, 0, 0, 0.2);
         background-color: $white;
         transition-property: width, min-width, margin-right, z-index;
-        z-index: 0;
+        z-index: 2;
         transition-duration: 0.5s;
         transition-timing-function: ease-in;
     }
@@ -23,7 +23,6 @@
         min-width: 331px;
         margin-right: var(--outline-margin-right);
         overflow-x:initial;
-        z-index:40;
     }
 
     .metadata:hover {
@@ -31,19 +30,19 @@
         min-width: 331px;
         margin-left: var(--outline-margin-right);
         overflow-x:initial;
-        z-index:40;
     }
 
     .resource-content {
         padding: 0 $spacer-lg;
         max-width: none;
+        z-index: 1;
     }
     .metadata {
         grid-area: metadata;
         width: var(--nav-width);
         min-width: var(--nav-width);
         transition-property: width, min-width, margin-left, z-index;
-        z-index: 0;
+        z-index: 2;
         transition-duration: 0.5s;
         transition-timing-function: ease-in;
 
