--- a/webapp/src/app/resource/metadata/metadata.component.scss
+++ b/webapp/src/app/resource/metadata/metadata.component.scss
@@ -9,6 +9,7 @@ h5,h6 {
 
 :host {
     padding-left: 20px;
+    z-index: inherit;
 }
 
 .image-thumbnail {
